<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">
    <TextView
        android:id="@+id/register1"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="Log in"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"></TextView>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bb"
        android:drawableLeft="@drawable/ic_baseline_person_24"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="username"
        android:textColorHint="#ACA9A9"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bb"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="password"
        android:textColorHint="#ACA9A9"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/fgtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/creteaccount"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical"
        android:text="Sign Up"
        android:paddingLeft="18dp"
        android:textColor="#F82435"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnfacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creteaccount"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btngoogle"
        android:layout_width="154dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google__g__logo"
        android:drawablePadding="5dp"
        android:text="Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnfacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/btnfacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/facebook_f_logo__2021_"
        android:drawablePadding="5dp"
        android:text="Facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btngoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btngoogle"
        app:layout_constraintTop_toTopOf="@+id/btngoogle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_bb"
        android:backgroundTint="#14D517"
        android:text="Log in"
        android:textSize="22dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_bb"
        android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="contact no"
        android:textColorHint="#ACA9A9"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textStyle="bold"
        android:textColor="#F11B1B"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btnfacebook"
        app:layout_constraintEnd_toEndOf="@+id/btnfacebook"
        app:layout_constraintStart_toStartOf="@+id/creteaccount"
        app:layout_constraintTop_toBottomOf="@+id/creteaccount" />

</androidx.constraintlayout.widget.ConstraintLayout>